--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -84,6 +84,7 @@
                                             <button type="button" class="btn btn-outline-secondary">Приб.</button>
                                             <button type="button" class="btn btn-outline-secondary">Отпр.</button>
                                             <button type="button" class="btn btn-outline-secondary" id="dislocation">Дисл.</button>
+                                            <button type="button" class="btn btn-outline-secondary" id="dissolution">Росп.</button>
                                             <button type="button" class="btn btn-outline-secondary">Выгр.</button>
                                             <button type="button" class="btn btn-outline-secondary">Погр.</button>
                                             <button type="button" class="btn btn-outline-secondary">Весы.</button>
@@ -189,7 +190,7 @@
         <div class="form-row">
             <div class="col-md-9 mb-2">
                 <label for="dislocation_wagon_way_from" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_way_from:</label>
-                <input type="text" class="form-control" id="dislocation_wagon_way_from" name="dislocation_wagon_way_from"  disabled="disabled"/>
+                <input type="text" class="form-control" id="dislocation_wagon_way_from" name="dislocation_wagon_way_from" disabled="disabled" />
             </div>
             <div class="col-md-3 mb-2">
                 <div class="form-check" style="margin-top:35%">
@@ -238,3 +239,56 @@
     </form>
 </div>
 
+<div class="cd-operation-detali">
+    <div class="container-fluid">
+        <form class="cd-form">
+            <div class="alert" id="car-operation-alert"></div>
+            <div class="row">
+                <div class="col-xl-12 mb-1 mt-1">
+                    <div class="card border-secondary mb-1">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-xl-12 text-center">
+                                    <div class="container-fluid">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body text-dark pl-3 pr-3">
+                            <div class="row mb-1">
+                                <div class="col-xl-4">
+                                    <div class="card border-primary">
+                                        <div class="card-header">Пути роспуска</div>
+                                        <div class="card-body">
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-8">
+                                    <div class="card border-primary">
+                                        <div class="card-header">Вагоны на путях роспуска</div>
+                                        <div class="card-body">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-1">
+                                <div class="col-xl-12">
+                                    <div class="card border-primary">
+                                        <div class="card-header">Вагоны для руспуска</div>
+                                        <div class="card-body">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <a href="#0" class="close cd-img-replace">Close</a>
+    </div>
+</div>
