--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -273,7 +273,9 @@
                                                 <div class="col-xl-9">
                                                     <fieldset class="border-primary">
                                                         <legend class="text-primary">Вагоны на путях роспуска</legend>
-                                                        <table id="wagons-way-dissolution" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                                        <div class="operator-detali-tables">
+                                                            <table id="wagons-way-on" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                                        </div>
                                                     </fieldset>
                                                 </div>
                                             </div>
