--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -82,7 +82,7 @@
                                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                         <div class="btn-group mr-2" role="group" aria-label="First group">
                                             <button type="button" class="btn btn-outline-secondary">Приб.</button>
-                                            <button type="button" class="btn btn-outline-secondary">Отпр.</button>
+                                            <button type="button" class="btn btn-outline-secondary" id="sending">Отпр.</button>
                                             <button type="button" class="btn btn-outline-secondary" id="dislocation">Дисл.</button>
                                             <button type="button" class="btn btn-outline-secondary" id="dissolution">Росп.</button>
                                             <button type="button" class="btn btn-outline-secondary">Выгр.</button>
@@ -263,7 +263,6 @@
                                         <div class="card-body">
                                             <fieldset class="border-primary">
                                                 <div class="form-group row">
-
                                                     <label for="operation_detali_dissolution_start" class="col-xl-2 col-form-label text-right">@IDSRWTResource.title_operation_start:</label>
                                                     <div class="col-xl-2">
                                                         <input type="datetime" class="form-control" id="operation_detali_dissolution_start" name="operation_detali_dissolution_start" />
@@ -277,8 +276,6 @@
                                                     <div class="col-xl-3 text-center">
                                                         <button class="btn btn-primary" id="operation_dissolution_run" disabled="disabled">@IDSRWTResource.title_operation_dissolution_run</button>
                                                     </div>
-
-
                                                 </div>
                                             </fieldset>
                                             <div class="row">
@@ -318,6 +315,114 @@
                     </div>
                 </div>
             </div>
+            <div class="row operation-sending">
+                <div class="col-xl-12 mb-1 mt-1">
+                    <div class="card border-secondary mb-1">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-xl-12 text-center">
+                                    <div class="container-fluid">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body text-dark pl-3 pr-3">
+                            <div class="row mb-1">
+                                <div class="col-xl-12">
+                                    <div class="card border-primary">
+                                        <div class="card-header text-left">ОТПРАВИТЬ НА ДРУГУЮ СТАНЦИЮ</div>
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-xl-3">
+                                                    <fieldset class="border-primary">
+                                                        <div class="form-row text-center ">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <button class="btn btn-primary" id="operation_sending_run" disabled="disabled">@IDSRWTResource.title_operation_sending_run</button>
+                                                            </div>
+
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_sending_way_from" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_way_from:</label>
+                                                                <input type="text" class="form-control" id="operation_detali_sending_way_from" name="operation_detali_sending_way_from" disabled="disabled" />
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_sending_station" class="col-form-label">@IDSRWTResource.title_operation_detali_sending_station:</label>
+                                                                <select class="form-control" id="operation_detali_sending_station" name="operation_detali_sending_station" required="required"></select>
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_sending_outer_ways" class="col-form-label">@IDSRWTResource.title_operation_detali_sending_outer_ways:</label>
+                                                                <select class="form-control" id="operation_detali_sending_outer_ways" name="operation_detali_sending_outer_ways" required="required"></select>
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_sending_num_train" class="col-form-label">@IDSRWTResource.title_operation_detali_sending_num_train:</label>
+                                                                <input type="number" class="form-control" id="operation_detali_sending_num_train" name="operation_detali_sending_num_train" />
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_locomotive1" class="col-form-label">@IDSRWTResource.title_operation_detali_sending_locomotive №1:</label>
+                                                                <select class="form-control" id="operation_detali_sending_locomotive1" name="operation_detali_sending_locomotive1" required="required"></select>
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_locomotive2" class="col-form-label">@IDSRWTResource.title_operation_detali_sending_locomotive №2:</label>
+                                                                <select class="form-control" id="operation_detali_sending_locomotive2" name="operation_detali_sending_locomotive2" required="required"></select>
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_start" class="col-form-label">@IDSRWTResource.title_operation_start</label>
+                                                                <input type="datetime" class="form-control" id="operation_detali_sending_start" name="operation_detali_sending_start" />
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
+                                                                <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                                <div class="col-xl-9">
+                                                    <fieldset class="border-primary">
+                                                        <legend class="text-primary">Сформированный состав</legend>
+                                                        <div class="operator-detali-tables">
+                                                            <table id="wagons-sending" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-1">
+                                <div class="col-xl-12">
+                                    <div class="card border-info">
+                                        <div class="card-header text-left">ВАГОНЫ ДЛЯ ОТПРАВКИ</div>
+                                        <div class="card-body operator-detali-tables">
+                                            <table id="wagons-sending-way-from" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </form>
         <a href="#0" class="close cd-img-replace">Close</a>
     </div>
