--- a/WEB_UI/Content/view/idsrwt/wsd.css
+++ b/WEB_UI/Content/view/idsrwt/wsd.css
@@ -4,7 +4,7 @@ body {
 }
 
 .operator-detali-tables {
-    font-size:12px;
+    font-size: 12px;
 }
 
 /*Коррекция отображения компонента дата и время*/
@@ -46,70 +46,121 @@ body {
 
 td.station-control {
     background: url('../../../Content/DataTables/media/images1/details_open.png') no-repeat center center;
-    width:20px;
+    width: 20px;
     cursor: pointer;
 }
 
 tr.shown td.station-control {
     background: url('../../../Content/DataTables/media/images1/details_close.png') no-repeat center center;
-    width:20px;
+    width: 20px;
 }
 
 td.park-control {
     background: url('../../../Content/DataTables/media/images1/details_open.png') no-repeat center center;
-    width:20px;
+    width: 20px;
     cursor: pointer;
 }
 
 tr.shown td.park-control {
     background: url('../../../Content/DataTables/media/images1/details_close.png') no-repeat center center;
-    width:20px;
+    width: 20px;
+}
+
+table.dataTable tbody tr.station  {
+    /*border: 1px solid #808080;*/
+/*    background-color: #ebebeb;*/
+    color: #000000;
+    text-transform: uppercase;
+    font-weight:600;
+}
+
+table.dataTable tbody tr.park {
+/*    background-color: #ebebeb;*/
+    color: #000000;
+    text-transform: uppercase;
 }
 
 td.station-name {
-    text-align:left
+    text-align: left;
+    white-space: nowrap;
+    /*overflow: hidden;*/
+    /*width:100px;*/
+    font-size: 12px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 td.park-name {
-    text-align:left
+    text-align: left;
+    white-space: nowrap;
+    font-size: 12px;
 }
 
 td.way-name {
-    text-align:left
+    text-align: left;
+    white-space: nowrap;
+    font-size: 12px;
 }
 
 .icon-station {
-    background-image:url("../../../Images/idsrwt/wsd/station.svg");
-    width:16px;
-    height:16px;
-    margin-right:5px;
+    background-image: url("../../../Images/idsrwt/wsd/station.svg");
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
 }
 
 .icon-park {
-    background-image:url("../../../Images/idsrwt/wsd/park.svg");
-    width:16px;
-    height:16px;
-    margin-right:5px;
+    background-image: url("../../../Images/idsrwt/wsd/park.svg");
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
 }
 
 .icon-way {
-    background-image:url("../../../Images/idsrwt/wsd/way.png");
-    width:16px;
-    height:16px;
-    margin-right:5px;
+    background-image: url("../../../Images/idsrwt/wsd/way.png");
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
 }
+
+.icon-tree-open {
+    background-image: url("../../../Images/idsrwt/wsd/tree_detali.png");
+    width: 16px;
+    height: 16px;
+    /*    margin-right: 5px;*/
+}
+
+.icon-tree-open-end {
+    background-image: url("../../../Images/idsrwt/wsd/tree_end.png");
+    width: 16px;
+    height: 16px;
+/*    margin-right: 5px;*/
+}
+
+.icon-tree-open-skeep {
+    background-image: url("../../../Images/idsrwt/wsd/tree_skeep.png");
+    width: 16px;
+    height: 16px;
+    /*    margin-right: 5px;*/
+}
+
+.icon-tree-open-not {
+    width: 16px;
+    height: 16px;
+    /*    margin-right: 5px;*/
+}
+
 table#wagons-way {
-    font-size:13px;
+    font-size: 13px;
 }
 
-table#wagons-way th {
-    font-size:13px;
-}
+    table#wagons-way th {
+        font-size: 13px;
+    }
 
-table#wagons-way tbody td {
-    font-size:13px;
-    white-space: nowrap;
-}
+    table#wagons-way tbody td {
+        font-size: 13px;
+        white-space: nowrap;
+    }
 
 /* -------------------------------- 
 
@@ -233,6 +284,6 @@ fieldset {
         }
 
 .not-select-wagon {
-    background-color:#fcca93;
-    text-decoration:line-through;
+    background-color: #fcca93;
+    text-decoration: line-through;
 }
